--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-coroutine",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Create a coroutine",
   "main": "index.js",
   "directories": {
@@ -22,5 +22,9 @@
     "generator"
   ],
   "author": "Quentin Engles <hollowdoor99@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+        "type": "git",
+        "url": "https://github.com/hollowdoor/create_coroutine.git"
+    }
 }
